test/expected/declare_uc16.out
declare x as unsigned char16_t
        ^
9: error: "unsigned char16_t" is illegal for built-in type
